# numerous-shore

./: .ampy  .gitignore  README.md  app.py  boot.py  example_i2c.py  main.py  mpr-xrun.conf  package.json  pyproject.toml
font-to-py/: README.md  roboto.py  writer_demo.py
lib/: README.md  microdot.py  ntptime.py  roboto.py  ssd1306.py  writer.py
lib/primitives/: README.md
reference/: async_button_with_callbacks.py  async_button_with_events.py  buzzer.py  clock.py  network.py  ntp.py  read_button.py  rw_file.py  schedule.py
templates/: cancel_countdown.html  index.html
tests/: microdot_test_client.py  test_boot.py  test_main.py
