[project]
name = "numerous-shore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adafruit-ampy>=1.1.0",
    "picozero>=0.4.2",
    "rshell>=0.0.36",
    "micropython-rp2-rpi-pico-w-stubs>=1.25.0.post1",
    "ruff>=0.11.8",
    "mpr>=1.31",
    "mpremote>=1.25.0",
    "mpy-cross>=1.25.0.post2",
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "lib",
]
